
2017-04-27 Sergey Kashyrin <ska@kiska.net>

	* codegen.c: on Windows we need to output entries prototypes
	  with dllexport, otherwise they will not be seen.
	* cobc.c: print_error_for_line cut continuation
	  snprintf returns -1 in MSC and on HPUX if max is reached

2017-04-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (print_fields, print_88_values): removed indent parameter as
	  we no longer indent by level number
	* cobc.c: cb_listing_linecount and cb_lines_per_page as unsigned int
	* cobc.c: finished implementation of -Werror

2017-04-22  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (stop_statement): added support for STOP identifier.

2017-04-22  Brian Tiffin <btiffin@gnu.org>

	* error.c, cobc.h, cobc.c, field.c, parser.y, ppparse.y, tree.h,
	  scanner.l, tree.c, pplex.l: cb_warning[_x] change with
	  preference argument, refactor undefined_error to account for new
	  prototype.

2017-04-17  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (process_translate): reverse program list in place so that
	  current_program doesn't point to last program in file (see bug #265).
	* codegen.c: reinstated local variable current_prog removed in
	  r1309. (codegen) would leave current_program pointing to the last
	  program in a file, from which you cannot get the first program. This
	  caused the listing code to break (bug #265) because it assumed
	  current_program would point to the first program in the file.

2017-04-13  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c: fixed buffer overflows and memory leaks in listing code.
	* cobc.c, pplex.l: refactored listing code: added comments,
	  improved variable names and modularised code.

2017-04-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: don't generate DEBUGGING code for empty PERFORMs,
	  fixes #368 (SIGSEGV)
	* cobc.c (cobc_sig_handler): don't ask for bug report on SIGPIPE

2017-04-10  Brian Tiffin <btiffin@gnu.org>
